# as-moses

moses/: CMakeLists.txt
moses/atomese/: CMakeLists.txt  atomese_interpreter.cc  atomese_interpreter.scm
moses/comboreduct/: CMakeLists.txt
tests/comboreduct/: CMakeLists.txt
tests/moses/main/: populateAtomSpaceUTest.cxxtest
